Finished contacts page and fixed spacing of code

--- a/south-hills-app/src/app/tab2/tab2.page.scss
+++ b/south-hills-app/src/app/tab2/tab2.page.scss
@@ -37,7 +37,14 @@ ion-icon {
     padding-right: 0.5rem;
 }
 
-a {
+a, h3 {
     padding-left: 0.5rem;
     padding-right: 2.5rem;
 }
+
+h1 {
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    color: black;
+}
+
